# 5426ASM2

./: .gitignore  CMakeLists.txt  Makefile  README.md
MPITest/: MPI.c  Makefile  mpi
include/: Baseline.h  MyAlgorithm.h  utils.h
src/: Baseline.c  MyAlgorithm.c  PairwiseComputation.c  utils.c
